--- a/src/sass/about/_about__comment.sass
+++ b/src/sass/about/_about__comment.sass
@@ -5,7 +5,7 @@
     align-items: center
     margin: 0 auto
     max-width: 1000px
-    padding: 50px 0 
+    padding: 50px 20px
   &__icon 
     @extend %flex-center
     width: 100px 
