--- a/src/sass/about/_about__our-trainers.sass
+++ b/src/sass/about/_about__our-trainers.sass
@@ -1,6 +1,8 @@
 .our-trainers
   &__wrapper
     padding: 120px 0
+    @include media($tablet)
+      padding: 50px 0
   &__title 
     @extend %main-title 
     text-align: center
@@ -11,6 +13,12 @@
     justify-content: space-between
     align-content: space-between
     min-height: 530px
+    @include media(1150px) 
+      min-height: 800px
+      justify-content: space-evenly
+    @include media($land-phone) 
+      min-height: 1600px
+      justify-content: center
   &__block
     display: flex
     align-items: center
