--- a/src/sass/index/_footer.sass
+++ b/src/sass/index/_footer.sass
@@ -11,6 +11,9 @@
     width: 30%
     @include media($land-phone)  
       width: 45%
+    @include media($port-phone) 
+      width: 100%
+      margin-bottom: 15px
     &-title 
       font-size: 18px
       text-transform: uppercase
@@ -22,7 +25,7 @@
       color: #fff 
       margin-bottom: 15px
   &__input
-    width: 100%
+    width: 80%
     padding: 6px 20px
     font-size: 12px
     color: $light
@@ -30,7 +33,6 @@
     margin-bottom: 13px 
     outline: none
   &__btn 
-    max-width: 220px
     padding: 8px 15px 
     border: none
     font-size: 12px
@@ -46,12 +48,15 @@
       margin-left: 8px
       fill: #fff
   &__logo
+    width: 100px
     margin-bottom: 22px
     margin: 0 auto 15px
   &__contacts 
     width: 40%
     @include media($land-phone)  
       width: 45%
+    @include media($port-phone) 
+      width: 100%
     &-text 
       font-size: 13px
       line-height: 23px 
@@ -66,6 +71,9 @@
       font-style: italic
       padding-left: 10px
       color: #fff
+  &__menu 
+    @include media($land-phone)  
+      margin-bottom: 15px
   &__menu, &__community
     @include media($land-phone) 
       width: 100%
@@ -76,10 +84,16 @@
       margin-bottom: 27px 
       @include media($land-phone)  
         border: 1px solid #fff
+        border-radius: 3px
+        padding: 5px
+        box-shadow: 0 0 5px #fff
+        cursor: pointer
+        margin-bottom: 10px
     &-list 
       padding-left: 5px
       @include media($land-phone)   
        display: none
+       margin-left: 20px
     &-link 
       display: inline-block
       font-size: 13px 
