--- a/src/sass/index/_main__info.sass
+++ b/src/sass/index/_main__info.sass
@@ -4,6 +4,11 @@
     @extend %flex-between
     @include media($desktop) 
       justify-content: space-evenly
+    @include media($land-phone)
+      flex-direction: column  
+      .trainers 
+        margin-bottom: 20px
+
 
 .main-index 
   .from-blog
