--- a/src/sass/index/_comment.sass
+++ b/src/sass/index/_comment.sass
@@ -6,6 +6,8 @@
     align-items: center
     margin: 0 auto
     padding: 0 20px
+    @include media($tablet)
+      min-height: 200px 
   &__icon
     width: 100px
     height: 100px
