--- a/src/sass/pricing/_pricing__pricing-plans.sass
+++ b/src/sass/pricing/_pricing__pricing-plans.sass
@@ -11,7 +11,14 @@
       margin-bottom: 25px 
     &__blocks 
       display: flex
+      flex-wrap: wrap
       justify-content: space-between 
+      @include media($desktop) 
+        justify-content: space-evenly
+      @include media($land-phone)
+        flex-direction: column 
+        align-items: center
+        
 
 .pricing-block 
   width: 270px
@@ -31,6 +38,20 @@
     .pricing-block__prefs 
       &:before 
         background: url("data:image/svg+xml;charset=UTF-8,%3csvg fill='%2300BFF0' viewBox='0 0 515.556 515.556' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 274.226l176.549 176.886L515.556 112.44l-48.67-47.997-290.337 290L47.996 225.891z'/%3e%3c/svg%3e") no-repeat
+  @include media($desktop)  
+    width: 230px
+    padding: 20px 10px
+  @include media($tablet) 
+    width: 40%
+    &:first-child
+      margin-bottom: 20px
+  @include media($land-phone)
+    width: 60%
+    margin-bottom: 20px 
+    &:last-child 
+      margin-bottom: 0
+  @include media($port-phone)
+    width: 100%
   &__uppertitle 
     font-size: 20px 
     font-weight: 300
@@ -43,10 +64,18 @@
     span 
       font-size: 20px
       font-style: italic
+  &__list 
+    width: 200px
+    margin: 0 auto
+    @include media($desktop) 
+      width: 180px
+    @include media($tablet)  
+      width: 230px
   &__prefs 
     font-size: 13px 
-    margin-bottom: 15px
+    margin-bottom: 15px 
     word-wrap: break-word
+    text-align: left
     &:last-child 
       margin-bottom: 30px
     &:before 
@@ -56,6 +85,10 @@
       height: 20px
       margin-right: 5px
       background: url("data:image/svg+xml;charset=UTF-8,%3csvg fill='%23fff' viewBox='0 0 515.556 515.556' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0 274.226l176.549 176.886L515.556 112.44l-48.67-47.997-290.337 290L47.996 225.891z'/%3e%3c/svg%3e") no-repeat
+    @include media($desktop)  
+      font-size: 11px       
+    @include media($tablet)  
+      font-size: 15px   
   &__btn 
     display: inline-block
     padding: 5px 40px 
