--- a/src/sass/blog/_blog__main.sass
+++ b/src/sass/blog/_blog__main.sass
@@ -4,6 +4,13 @@
     flex-wrap: wrap
     justify-content: space-between
     padding: 80px 0
+    @include media($desktop)
+      flex-direction: column
+      align-items: center
+      .blog-aside 
+        display: none
+    @include media($land-phone)  
+      padding: 30px 0
 
 .blog-column
   max-width: 770px 
@@ -28,7 +35,7 @@
     font-weight: 600
     line-height: 24px
     color: $light 
-    padding: 25px
+    padding: 25px 45px 25px 25px
   &__img 
     display: block
     max-height: 250px
@@ -38,22 +45,35 @@
     font-size: 12px 
     line-height: 18px
     color: #99a3b1 
+    @include media($port-phone) 
+      padding: 15px 30px 0 30px
   &__bottom 
     display: flex 
     align-items: center 
     padding: 25px 30px
+    @include media($port-phone) 
+      padding: 20px 30px
   &__date, &__person, &__like, &__send
     text-align: center 
     width: 70px
     margin-right: 35px
+    @include media($port-phone) 
+      width: 50px 
+      height: 50px
+      margin-right: 20px
   &__date-icon, &__person-icon, &__like-icon, &__send-icon
     width: 30px 
     height: 30px 
     fill: $light
     margin-bottom: 3px 
+    @include media($port-phone) 
+      width: 20px 
+      height: 20px
   &__date-text, &__person-text, &__like-text, &__send-text
     font-size: 12px   
     color: $light
+    @include media($port-phone) 
+      font-size: 10px
   &__btn 
     margin-left: auto
     padding: 5px 10px 
@@ -66,6 +86,8 @@
     border: none
     margin: 70px 0 40px 
     background-color: #e5e6e6
+    @include media($land-phone) 
+      margin: 20px
   &__video 
     width: 100%
     height: 400px
@@ -180,7 +202,7 @@
   &-pages 
     display: flex
     align-items: center
-    margin-top: 15px
+    margin-top: 30px
     &__btn 
       padding: 7px 20px 
       border: none
