--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -352,7 +352,7 @@
 .underheader-bg 
   min-height: 300px
   position: relative
-  background: url(/img/about/about-us_bg.jpg) no-repeat
+  background: url(../img/about/about-us_bg.jpg) no-repeat
   background-size: cover
   border-bottom: 10px solid $dark 
   @include media($land-phone)
@@ -369,17 +369,17 @@
     color: #fff
     background-color: $dark
   &--classes
-    background: url(/img/classes/classes-bg.jpg) no-repeat
+    background: url(../img/classes/classes-bg.jpg) no-repeat
     background-size: cover
     &:before 
       content: 'Категории'
   &--timetable 
-    background: url(/img/timetable/timetable-bg.jpg)
+    background: url(../img/timetable/timetable-bg.jpg)
     background-size: cover
     &:before 
       content: 'Расписание'
   &--pricing 
-    background: url(/img/pricing/pricing-bg.jpg)
+    background: url(../img/pricing/pricing-bg.jpg)
     background-size: cover
     &:before 
       content: 'Цены'
@@ -388,12 +388,12 @@
     &:before 
       content: 'Контакты'
   &--blog 
-    background: url(/img/blog/blog-bg.jpg) no-repeat 
+    background: url(../img/blog/blog-bg.jpg) no-repeat 
     background-size: cover
     &:before 
       content: 'Блог'
   &--pilates 
-    background: url(/img/class-single/pilates-bg.jpg)
+    background: url(../img/class-single/pilates-bg.jpg)
     background-size: cover
     &:before 
       display: none
@@ -410,13 +410,13 @@
     span 
       font-size: 15px
   &--cardio 
-    background: url(/img/class-single/cardio-bg.jpg)
+    background: url(../img/class-single/cardio-bg.jpg)
     background-size: cover
   &--crossfit
-    background: url(/img/class-single/crossfit-bg.jpg)
+    background: url(../img/class-single/crossfit-bg.jpg)
     background-size: cover
   &--aerobics
-    background: url(/img/class-single/aerobics-bg.jpg)
+    background: url(../img/class-single/aerobics-bg.jpg)
     background-size: cover
   &--cardio, &--crossfit, &--aerobics 
     &:before 
