--- a/src/sass/contact/_contact__content.sass
+++ b/src/sass/contact/_contact__content.sass
@@ -9,27 +9,30 @@
     margin-bottom: 50px
   &__wrapper 
     @include media($desktop) 
-    display: flex
-    flex-direction: column
-    align-items: center
-    justify-content: center
-    .from-blog 
-      display: none
+      display: flex
+      flex-wrap: wrap
+      align-items: center
+      justify-content: center
+      .from-blog 
+        display: none
+    @include media($land-phone) 
+      font-weight: no-wrap 
+      flex-direction: column
   &__events, &__from-blog
     display: inline-block
     vertical-align: top
   &__events 
     margin-right: 24px
-    @include media(840px) 
+    @include media($desktop) 
       margin-right: 0
 
 .schedule--contact 
   position: static
   float: left
   margin-right: 30px
-  @include media(840px)
-    margin-bottom: 30px 
+  @include media(820px)
     margin-right: 0
+    margin-bottom: 30px
 
 .join__join--contact 
   display: inline-flex
