--- a/src/sass/index/_main__map.sass
+++ b/src/sass/index/_main__map.sass
@@ -15,7 +15,8 @@
   position: absolute
   top: 0
   right: 5%
-  width: 370px
+  max-width: 370px
+  width: 100%
   height: 500px
   padding: 25px 25px
   text-align: center
