--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -38,3 +38,22 @@
 .background-white 
   background-color: #fff
 
+.red-color-fill 
+  fill: #ff0000 
+
+.blue-color-fill 
+  fill: #2B0DDE
+
+  
+// Animation 
+
+.trainer-icon-anim 
+  animation: trainer-icon-scale 0.8s
+
+@keyframes trainer-icon-scale
+  0%
+    transform: scale(1)
+  50% 
+    transform: scale(1.5)
+  100%
+    transform: scale(1)
