--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -209,7 +209,7 @@
   &__block 
     width: 100%
     min-height: 250px 
-    padding: 20px 30px 25px
+    padding: 20px 30px
     background-color: #fff
     hr 
       width: 1px 
@@ -221,7 +221,6 @@
   &__trainer 
     position: relative
     width: 160px
-    min-height: 128px
     padding: 0 10px
     text-align: center
   &__img 
@@ -236,6 +235,7 @@
     font-weight: 600 
     text-transform: uppercase
     color: $light 
+    margin-bottom: 5px
   &__spec 
     font-size: 12px 
     font-style: italic
@@ -246,7 +246,7 @@
     font-size: 12px 
     font-style: italic
     color: #606060
-    margin-bottom: 12px 
+    margin-bottom: 20px 
   &__icons 
     display: flex
   &__twitter-link 
@@ -261,7 +261,7 @@
     &-like, &-thumb
       fill: #b8b8b8
     &-like 
-      margin-right: 3px
+      margin-right: 5px
 
 .events 
   max-width: 370px 
@@ -284,6 +284,7 @@
       font-weight: 600
       text-transform: uppercase
       color: #fff
+      margin-bottom: 3px
   &__img 
     width: 120px
     height: 70px
