index blocks fix

--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -27,7 +27,7 @@
   background-color: #f3f3f3
 
 .liveroom 
-  max-width: 370px
+  width: 370px
   min-height: 250px
   border-bottom: 4px solid $dark
   @include media($desktop)
